feat: Add Docker guide and analysis documents
- Add GEMINI.md for project analysis and DOCKER_GUIDE.md for container execution instructions.
- Fix compose.yaml for stdio-based operation by removing port mapping and adding a build context.

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,7 @@
 
 services:
   app:
+    build: .
     image: kojeomstudio/tavily-mcp:v0
     
     # 서비스(컨테이너)의 이름을 지정합니다. (선택 사항)
@@ -9,8 +10,6 @@ services:
     # 이 변수들은 컨테이너 내부로 주입됩니다.
     env_file:
       - ./.env
-    ports:
-      - "8080:8080" 
       
     # 컨테이너가 예기치 않게 중지되면 자동으로 다시 시작합니다.
     restart: unless-stopped
